test/invalid/idl/async-iterable-unterminated-args.webidl
interface X {
  async_iterable<DOMString>(
};
